# rmq-discord-transport

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml
src/: interface.rs  main.rs
