[package]
name = "rmq-discord-transport"
version = "0.1.0"
authors = ["Jacob <19372006+starsflower@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = { version = "0.4.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9.16"
dotenv = "0.15.0"